<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="vault_overview_remove_frequent_items">Remove from frequent items</string>
</resources>
